--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,20 @@ Flask==0.11.1
 Flask-Bootstrap==3.3.6.0
 Flask-Login==0.3.2
 Flask-Migrate==2.0.0
+Flask-Moment==0.5.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
+gunicorn==19.6.0
+idna==2.1
 itsdangerous==0.24
 Jinja2==2.8
 Mako==1.0.4
 MarkupSafe==0.23
+pyasn1==0.1.9
+pycparser==2.14
 python-editor==1.0.1
+six==1.10.0
 SQLAlchemy==1.0.14
 visitor==0.1.3
 Werkzeug==0.11.10
